#1930 fix wrap-content usage

--- a/client/pages/DataSourcesQueue/List/styles.pcss
+++ b/client/pages/DataSourcesQueue/List/styles.pcss
@@ -1,8 +1,3 @@
-.wrap
-  overflow-wrap: break-word
-  word-break: break-word
-  hypens: auto
-
 .datepicker
   div
     width: 100%
